Modificado o exercicio de tabuada para que pareca mais com o do professor.

--- a/modulo-E-repeticao-em-javascript/exercicio/ex020/css/style.css
+++ b/modulo-E-repeticao-em-javascript/exercicio/ex020/css/style.css
@@ -69,8 +69,9 @@ footer {
 	border-radius: 5px;
 }
 
-#saida {
+#saida select {
 	display: none;
 	border: solid 2px rgb(70,142,236);
-	padding: 10px 20px;
+	padding: 5px;
+	outline: none;
 }
