--- a/modulo-F-avancando-os-estudos-em-javascript/exercicios/ex036/css/style.css
+++ b/modulo-F-avancando-os-estudos-em-javascript/exercicios/ex036/css/style.css
@@ -56,6 +56,10 @@ footer {
 	flex-direction: column;
 }
 
+#entrada .entrada-valores select[name="select-valores"] {
+	width: 150px;
+}
+
 #entrada, #saida p {
 	margin-bottom: 10px;
 }
